implemented Patient and Prescription features